inf/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cicdk3s-service
spec:
  selector:
    app: cicdk3s-deploy
  ports:
  - port: 8080
    targetPort: 8080
